@@ -2,7 +2,6 @@
 set -e
 
 IMMODULES_DIR=/@MODULES_BASE_PATH@/immodules
-IMMODULES_DIR_OLD=/@OLD_MODULES_BASE_PATH@/immodules
 
 if [ "$1" = triggered ]; then
     # This is triggered everytime an application installs a
@@ -14,7 +13,7 @@ fi
 #DEBHELPER#
 
 # Also handle the initial installation
-if [ -d $IMMODULES_DIR ] || [ -d $IMMODULES_DIR_OLD ]; then
+if [ -d $IMMODULES_DIR ]; then
      /@LIBDIR@/@SHARED_PKG@/gtk4-query-immodules --update-cache || true
 fi
 
