@@ -1,2 +1,1 @@
 interest-noawait /@MODULES_BASE_PATH@/immodules
-interest-noawait /@OLD_MODULES_BASE_PATH@/immodules
